# keysharp

./: .gitattributes  .gitignore  AGENTS.md  Directory.Build.props  Directory.Build.targets  Keysharp.sln  README.md  alternatives.md
.github/workflows/: ci.yml  curated-tests.yml  release.yml
Keysharp/: CompileServer.cs  Info.plist  Keysharp.csproj  Keysharp.manifest  Program.cs
Keysharp.Benchmark/: DllBench.cs  FuncBench.cs  GlobalUsings.cs  IndexBench.cs  Keysharp.Benchmark.csproj  MapBench.cs  MathBench.cs  ParserBench.cs  Program.cs  ReflectionBench.cs  ValBench.cs
Keysharp.Core/: GlobalUsings.cs  Keysharp.Core.csproj
Keysharp.Core/Builtins/: Accessors.cs  Array.cs  Buffer.cs  Debug.cs  Dir.cs  Dll.cs  Drive.cs  Enumerator.cs  Env.cs  Errors.cs  External.cs  Flow.cs  Functions.cs  Ini.cs  Json.cs  Keyboard.cs  KeysharpEnhancements.cs  Map.cs  Math.cs  Misc.cs  Monitor.cs  Mouse.cs  Network.cs  Objects.cs  Permissions.cs  Primitives.cs  Processes.cs  RealThreads.cs  Registrys.cs  Screen.cs  Security.cs  Sound.cs  Structs.cs  Types.cs  WinEvents.cs
Keysharp.Core/Core/: Accessors.cs  Array.cs  Buffer.cs  Debug.cs  Dir.cs  Dll.cs  Drive.cs  Env.cs  Errors.cs  External.cs  Files.cs  Flow.cs  Functions.cs  ImageList.cs  Images.cs  Ini.cs  Json.cs  Keyboard.cs  KeysharpEnhancements.cs  Loops.cs  Map.cs  Math.cs  Monitor.cs  Mouse.cs  Network.cs  Objects.cs  Primitives.cs  Processes.cs  RealThreads.cs  RegEx.cs  RegExCs.cs  Registrys.cs  Screen.cs  Security.cs  Sound.cs  Strings.cs  Types.cs
Keysharp.Core/Internals/: Flow.cs
Keysharp.Core/Linux/: AtSpiClient.cs  ControlItem.cs  ControlManager.cs  Drive.cs  LinuxCharMapper.cs  LinuxHookThread.cs  LinuxKeyboardMouseSender.cs  MenuStrip.cs  PlatformManager.cs  SharpHookKeyMapper.cs  SystemInformation.cs  ToolTip.cs  WinFormsStubs.cs  WindowItem.cs  WindowManager.cs
Keysharp.Core/Parsing/: CompilerHelper.cs  Options.cs  Parser.cs  PreReader.cs
Keysharp.Core/Properties/: Resources.Designer.cs  Resources.resx
Keysharp.Core/Runtime/: Attributes.cs  Module.cs
Keysharp.Core/Windows/: ComInterop.cs  ControlManager.cs  Drive.cs  MessageFilter.cs  PlatformManager.cs  StatusBar.cs  WindowItem.cs  WindowManager.cs  WindowsAPI.cs  WindowsHookThread.cs  WindowsKeyboardMouseSender.cs
Keysharp.Install/: Keysharp.Install.vdproj  package-linux.sh  package-macos.sh  package-windows.ps1
Keysharp.Install/linux/: install.sh  keysharp-helper.desktop  keysharp-kwin-screencap.desktop  keysharp-screencap.desktop  keysharp.desktop  keysharp.xml  keyview.desktop  uninstall.sh
Keysharp.Install/macos/: create-signing-cert.sh  install-cli-commands.sh  install-vscode-autohotkey-compat.sh  install.command  keysharp.entitlements  uninstall.sh
Keysharp.OutputTest/: Info.plist  Keysharp.OutputTest.csproj  Keysharp.OutputTest.manifest  Program.cs
Keysharp.Tests/: AssemblyInfo.cs  AssignTests.cs  Basic.playlist  BuiltInVarsTests.cs  ClassTests.cs  ClipboardRecoveryTests.cs  CollectionsTests.cs  DirectiveTests.cs  DriveTests.cs  EnvTests.cs  ExternalTests.cs  FileAndDirTests.cs  FlowTests.cs  FunctionLabelTests.cs  GlobalUsings.cs  GuiTests.cs  HotstringTests.cs  HotstringTests.txt  ImageTests.cs  InputHookTests.cs  InputSchedulerTests.cs  Keysharp.Tests.csproj  LexerTests.cs  LinuxInputdLiveTests.cs  LinuxInputdManagerTests.cs  LinuxInputdProtocolTests.cs  MacInputTests.cs  MathTests.cs  MessageFilterTests.cs  MiscTests.cs  ModuleTests.cs  MonitorTests.cs  NetworkTests.cs  ParserTests.cs  ProcessTests.cs  RealThreadIntegrationTests.cs  RecoverableServiceTests.cs  RetryGateTests.cs  RunnerTests.cs  SchedulerTests.cs  (+11 more)
Keysharp.Tests/Code/: assign-dyn-var.ahk  assign-empty.ahk  assign-float.ahk  assign-hex.ahk  assign-int.ahk  assign-multiline.ahk  assign-null.ahk  assign-numerics.ahk  assign-quoted.ahk  assign-string-case-compare.ahk  assign-string-concat.ahk  class.ahk  (+243 more)
Keyview/: CSharpStyler.cs  GlobalUsings.cs  Icon.icns  Info.plist  Keyview.Designer.cs  Keyview.cs  Keyview.csproj  Program.cs  ScintillaStyler.cs  SearchManager.cs  SyntaxHighlighter.cs
demos/: ClipboardHistory.ks  HotkeyCard.ks  InputHUD.ks  OCRSnip.ks  README.md  Remap.ks  Shell.ks  WindowGrab.ks  WindowTiler.ks
docs/: CROSSPLATFORM-TODO.md  LINUX-TODO.md  MACOS-TODO.md  capabilities.json  capabilities.md  reference.md
eng/: Set-BundleVersion.ps1
native/keysharp-common/: CMakeLists.txt
native/keysharp-common/include/keysharp_trust/: permissions.h
native/keysharp-common/src/: permissions.c
native/keysharp-helper/: CMakeLists.txt  README.md  keysharp-helper.desktop.in
native/keysharp-helper/src/: main.c
native/keysharp-inputd/: CMakeLists.txt  README.md
native/keysharp-inputd/docs/: physical-live-tests.md  protocol.md
native/keysharp-inputd/include/keysharp_inputd/: daemon.h  globals.h  ipc.h  linux_devices.h  linux_synth.h  permissions.h  platform.h  protocol.h  synthetic_hooks.h
native/keysharp-inputd/src/: active_session.c  active_session.h  connection_ref.c  connection_ref.h  daemon.c  ipc_unix.c  main.c  permissions.c  pipe_ring.c  pipe_ring.h  synthetic_hooks.c  trust_cli.c  util.h  wake_pipe.c  wake_pipe.h  worker_pool.c  worker_pool.h
native/keysharp-inputd/src/daemon/: README.md  client_lifecycle.inc  grab_leases.inc  hook_dispatch.inc  hook_ingress.inc  hook_lanes.inc  privilege_workers.inc  protocol_server.inc
native/keysharp-inputd/src/platform/: linux_device_filter.h  linux_devices.c  linux_synth.c  platform_linux.c  vk_evdev.c  vk_evdev.h
native/keysharp-inputd/systemd/: keysharp-inputd.service.in  keysharp-inputd.socket
native/keysharp-inputd/tests/: active_session_tests.c  daemon_unit_tests.c  linux_device_filter_tests.c  pipe_ring_tests.c  scheduler_adversarial_tests.c  synthetic_hooks_tests.c  systemd_unit_tests.cmake  wake_pipe_tests.c
native/keysharp-inputd/tools/: client.c  hooktest.c  physical-source.c  trustctl.c
native/keysharp-kwin-screencap/: CMakeLists.txt  README.md  keysharp-kwin-screencap.desktop.in
native/keysharp-kwin-screencap/src/: main.c
scripts/: generate-capabilities.ps1  verify-capabilities-parity.ps1
(+745 files in other folders)
